-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3
-
None
-
-
cf96c6862 (dev), 963fefe80 (6.6), 27fff3b0c (tqtc/lts-6.5)
I just see such crashes among our users crash reports. It's never reproduced for me locally,
so I suppose this depends on specific Windows configuration or drivers.
Unhandled exception at 0x00007FFFAFFC3FAB (Qt6Multimedia.dll) in minidump (63).dmp: 0xC0000005: Access violation reading location 0x0000000000000000.
Call stack:
> [Inline Frame] Qt6Multimedia.dll!QWindowsMediaDevices::availableDevices::__l2::<lambda_adedd525a93e024725aac7e7985a2065>::operator()() Line 218 C++
Qt6Multimedia.dll!QWindowsMediaDevices::availableDevices(QAudioDevice::Mode mode) Line 212 C++
Qt6Multimedia.dll!QWindowsMediaDevices::audioOutputs() Line 277 C++
[Inline Frame] Qt6Multimedia.dll!QMediaDevices::audioOutputs() Line 137 C++
Qt6Multimedia.dll!QMediaDevices::defaultAudioOutput() Line 202 C++
Qt6Multimedia.dll!QAudioOutput::QAudioOutput(QObject * parent) Line 57 C++
...