src/multimedia/windows/qwindowsmediadevices.cpp
@@ -19,6 +19,7 @@
 #include <qwindowsmfdefs_p.h>
 
 #include <QtCore/qmap.h>
+#include <private/qsystemerror_p.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -155,35 +156,36 @@ QWindowsMediaDevices::QWindowsMediaDevices()
                 CLSCTX_INPROC_SERVER,__uuidof(IMMDeviceEnumerator),
                 (void**)&m_deviceEnumerator);
 
-    if (SUCCEEDED(hr)) {
-        QMap<QString, DWORD> devState;
-        ComPtr<IMMDeviceCollection> devColl;
-        UINT count = 0;
+    if (FAILED(hr)) {
+        qWarning("Failed to instantiate IMMDeviceEnumerator (%s)."
+                 "Audio device change notification will be disabled",
+            qPrintable(QSystemError::windowsComString(hr)));
+        return;
+    }
 
-        if (SUCCEEDED(m_deviceEnumerator->EnumAudioEndpoints(EDataFlow::eAll, DEVICE_STATEMASK_ALL, devColl.GetAddressOf()))
-            && SUCCEEDED(devColl->GetCount(&count)))
-        {
-            for (UINT i = 0; i < count; i++) {
-                ComPtr<IMMDevice> device;
-                DWORD state = 0;
-                QComTaskResource<WCHAR> id;
+    QMap<QString, DWORD> devState;
+    ComPtr<IMMDeviceCollection> devColl;
+    UINT count = 0;
 
-                if (SUCCEEDED(devColl->Item(i, device.GetAddressOf()))
-                    && SUCCEEDED(device->GetState(&state))
-                    && SUCCEEDED(device->GetId(id.address()))) {
-                    devState.insert(QString::fromWCharArray(id.get()), state);
-                }
+    if (SUCCEEDED(m_deviceEnumerator->EnumAudioEndpoints(EDataFlow::eAll, DEVICE_STATEMASK_ALL, devColl.GetAddressOf()))
+        && SUCCEEDED(devColl->GetCount(&count)))
+    {
+        for (UINT i = 0; i < count; i++) {
+            ComPtr<IMMDevice> device;
+            DWORD state = 0;
+            QComTaskResource<WCHAR> id;
+
+            if (SUCCEEDED(devColl->Item(i, device.GetAddressOf()))
+                && SUCCEEDED(device->GetState(&state))
+                && SUCCEEDED(device->GetId(id.address()))) {
+                devState.insert(QString::fromWCharArray(id.get()), state);
             }
         }
-
-
-        m_notificationClient =
-                makeComObject<CMMNotificationClient>(this, m_deviceEnumerator, std::move(devState));
-        m_deviceEnumerator->RegisterEndpointNotificationCallback(m_notificationClient.Get());
-
-    } else {
-        qWarning() << "Audio device change notification disabled";
     }
+
+
+    m_notificationClient = makeComObject<CMMNotificationClient>(this, m_deviceEnumerator, std::move(devState));
+    m_deviceEnumerator->RegisterEndpointNotificationCallback(m_notificationClient.Get());
 }
 
 QWindowsMediaDevices::~QWindowsMediaDevices()
@@ -207,6 +209,9 @@ QWindowsMediaDevices::~QWindowsMediaDevices()
 
 QList<QAudioDevice> QWindowsMediaDevices::availableDevices(QAudioDevice::Mode mode) const
 {
+    if (!m_deviceEnumerator)
+        return {};
+
     const auto audioOut = mode == QAudioDevice::Output;
 
     const auto defaultAudioDeviceID = [this, audioOut]{
